--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "bfl-bot",
+  "name": "hfb-bot",
   "version": "1.1.0",
   "author": "gabrielbrop",
   "license": "MIT",
   "scripts": {
-    "prod": "yarn webpack --env=mode=production",
-    "dev": "yarn webpack --env=mode=development"
+    "build": "tsc",
+    "start": "tsc && node ./dist/Bot.js",
+    "start-perf": "tsc && node --prof ./dist/Bot.js"
   },
   "dependencies": {
     "@abraham/reflection": "^0.8.0",
-    "dotenv": "^16.0.3"
+    "@koush/wrtc": "^0.5.3",
+    "@peculiar/webcrypto": "^1.4.3",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "https-proxy-agent": "^7.0.0",
+    "json5": "^2.2.3",
+    "node-fetch": "^3.3.1",
+    "node-fetch-commonjs": "^3.2.4",
+    "pako": "^2.1.0",
+    "perf_hooks": "^0.0.1",
+    "typescript": "^5.0.4",
+    "url": "^0.11.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0"
+    "@types/ws": "^8.5.4"
   }
 }
