--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@types/node": "^18.11.11",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.58.2",
