--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-    "compilerOptions": {
-        "module": "CommonJS",
-        "esModuleInterop": true,
-        "noImplicitAny": true,
-        "removeComments": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "target": "esnext",
-        "experimentalDecorators": true,
-        "resolveJsonModule": true,
-        "ignoreDeprecations": "5.0",
-        "allowJs": true,
-        "outDir": "dist",
-    },
+  "compilerOptions": {
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "target": "esnext",
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "ignoreDeprecations": "5.0",
+    "allowJs": true,
+    "outDir": "dist"
+  }
 }
