--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.8.0",
+    "@koush/wrtc": "^0.5.3",
     "@peculiar/webcrypto": "^1.4.3",
-    "@roamhq/wrtc": "^0.8.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "https-proxy-agent": "^7.0.0",
