Update dependencies and add new library files

--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.8.0",
-    "@haxbrasil/lib": "^1.1.2",
     "@koush/wrtc": "^0.5.3",
     "@peculiar/webcrypto": "^1.4.3",
+    "axios": "^1.13.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "https-proxy-agent": "^7.0.0",
     "json-2-csv": "^5.0.1",
     "json5": "^2.2.3",
+    "neverthrow": "^8.2.0",
     "node-fetch": "^3.3.1",
     "node-fetch-commonjs": "^3.2.4",
     "pako": "^2.1.0",
     "perf_hooks": "^0.0.1",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "url": "^0.11.0",
     "ws": "^8.13.0",
     "xhr2": "^0.2.1",
